globus-gsi-credential (7.12-1+gt6.@distro@) @distro@; urgency=low

  * Remove prototype for non-existing function

 -- Globus Toolkit <support@globus.org>  Mon, 30 Oct 2017 19:52:15 +0000

globus-gsi-credential (7.11-1+gt6.@distro@) @distro@; urgency=low

  * Update for el.5 openssl101e

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 15:37:25 -0400

globus-gsi-credential (7.10-1+gt6.@distro@) @distro@; urgency=low

  * Updates for OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 15:07:10 -0400

globus-gsi-credential (7.9-1+gt6.@distro@) @distro@; urgency=low

  * add missing const to parameters

 -- Globus Toolkit <support@globus.org>  Wed, 01 Jul 2015 17:03:28 -0400

globus-gsi-credential (7.8-1+gt6.@distro@) @distro@; urgency=low

  * Add deprecation comment to obsolete functions
  * Tighten up const on some parameters

 -- Globus Toolkit <support@globus.org>  Thu, 28 May 2015 07:23:35 -0400

globus-gsi-credential (7.7-1+gt6.@distro@) @distro@; urgency=low

  * Doxygen markup fixes
  * Include more manpages for API
  * Fix typos and clarify some documentation
  * Quiet some autoconf/automake warnings
  * GT-106: Free requirement for cred_get_subject_name not in API docs

 -- Globus Toolkit <support@globus.org>  Wed, 24 Sep 2014 14:00:16 -0400

globus-gsi-credential (7.6-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:29 -0400

globus-gsi-credential (7.5-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-gsi-credential (7.5-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gsi-credential (7.5-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:43 -0400
