@@ -6,7 +6,7 @@ Name:		globus-gsi-credential
 %global apache_license ASL 2.0
 %endif
 %global _name %(tr - _ <<< %{name})
-Version:	7.12
+Version:	7.13
 Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - Globus GSI Credential Library
@@ -186,6 +186,10 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Wed Nov 01 2017 Globus Toolkit <support@globus.org> - 7.13-1
+- Fix crash when cert not set.
+- Remove compatibility shims for old versions of OpenSSL
+
 * Mon Oct 30 2017 Globus Toolkit <support@globus.org> - 7.12-1
 - Remove prototype for non-existing function
 
