@@ -1,3 +1,10 @@
+globus-gsi-credential (7.13-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix crash when cert not set.
+  * Remove compatibility shims for old versions of OpenSSL
+
+ -- Globus Toolkit <support@globus.org>  Wed, 01 Nov 2017 20:18:09 +0000
+
 globus-gsi-credential (7.12-1+gt6.@distro@) @distro@; urgency=low
 
   * Remove prototype for non-existing function
